@@ -1,7 +1,5 @@
 <?xml version="1.0"?>
 <object name="portal_css">
- <stylesheet id="++resource++collective.flowplayer.css/flowplayer.css"
-    remove="True" />
- <stylesheet id="++resource++collective.flowplayer.css/flowplayer-horizontal.css"
-    remove="True" />
+ <stylesheet remove="True" id="++resource++collective.flowplayer.css/flowplayer.css"/>
+ <stylesheet remove="True" id="++resource++collective.flowplayer.css/flowplayer-horizontal.css"/>
 </object>
