@@ -1,0 +1,8 @@
+<?xml version="1.0"?>
+<object name="portal_types" meta_type="Plone Types Tool">
+    <object name="Collection" />
+    <object name="File" />
+    <object name="Folder" />
+    <object name="Link" />
+    <object name="Topic" />
+</object>
