@@ -1,0 +1,6 @@
+<?xml version="1.0"?>
+<object name="Folder">
+  <property name="view_methods" purge="false">
+    <element value="flowplayer" remove="True"/>
+  </property>
+</object>
